created contacts and tweaked transitions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#splash" class="nav-link" onclick="showSplash()">Home</a></li>
                 <li><a href="#about" class="nav-link" onclick="showAbout()">About</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact" class="nav-link" onclick="showContact()">Contact</a></li>
             </ul>
         </nav>
     
@@ -41,6 +41,19 @@
                 </p>
             </div>
         </section>
+
+        <!-- Contact Section -->
+<section id="contact" class="contact hidden">
+    <div class="contact-container">
+        <h2>Contact Me</h2>
+        <p>
+            Placeholder text for the Contact section. Here, you can include ways for people to contact you, such as email, phone, or social media links.
+        </p>
+        <p>
+            You can also add a contact form or other details depending on what you'd like to provide.
+        </p>
+    </div>
+</section>
 
         <script src="./Resources/JS/main.js"></script>
     </body>
