--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
     <body>
         <!-- Navigation Bar -->
+        <button class="mobile-navbar-toggle" aria-controls="site-navigation" aria-expanded="false">Menu</button>
+        
         <nav class="navbar">
-            <ul class="nav-links">
+            <ul class="nav-links" id="site-navigation" data-visible="false">
                 <li><a href="#splash" class="nav-link" onclick="showSplash()">Home</a></li>
                 <li><a href="#about" class="nav-link" onclick="showAbout()">About</a></li>
                 <li><a href="#projects">Projects</a></li>
