added transitions for .mobile-navbar-toggle .icons

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
     <body>
         <!-- Navigation Bar -->
-        <button class="mobile-navbar-toggle" aria-controls="site-navigation" aria-expanded="false">Menu</button>
+        <button class="mobile-navbar-toggle" aria-controls="site-navigation" aria-expanded="false">
+            <span class="icon default">Menu</span>
+            <span class="icon active">Menu</span>
+        </button>
         
         <nav class="navbar">
             <ul class="nav-links" id="site-navigation" data-visible="false">
