Added projects section and make changes to the colors in sections. Also fixed some responsive aesthetics.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul class="nav-links" id="site-navigation" data-visible="false">
                 <li><a href="#splash" class="nav-link" onclick="showSplash()">Home</a></li>
                 <li><a href="#about" class="nav-link" onclick="showAbout()">About</a></li>
-                <li><a href="#projects">Projects</a></li>
+                <li><a href="#projects" class="nav-link" onclick="showProjects()">Projects</a></li>
                 <li><a href="#contact" class="nav-link" onclick="showContact()">Contact</a></li>
             </ul>
         </nav>
@@ -32,35 +32,45 @@
         <section id="splash" class="splash">
             <div class="splash-content">
                 <h1>Name: Blake Davis</h1>
-                <h2>Mission: Act as a full stack developer; helping humans and machines work towards a brighter future together</h2>
+                <h2>Mission: Act as a full stack developer; helping humans and machines work towards a brighter future together .  &nbsp.   &nbsp.</h2>
             </div>
         </section>
+
+        <!-- Projects Section -->
+        <section id="projects" class="projects hidden">
+            <div class="projects-container">
+                <h2>Projects</h2>
+                    <p>Placeholder text for the Projects section. Showcase your work, such as applications, websites, or any creative endeavors.</p>
+                    <p>This is a space where you can add project descriptions, images, and links to live demos or repositories.</p>
+            </div>
+            </section>
+
 
         <!-- About Section -->
         <section id="about" class="about hidden">
             <div class="about-container">
                 <h2>About Me</h2>
-                <p>
+                    <p>
                     Placeholder text for the About section. This is where you'll describe yourself, your work, and your passion for helping humans and machines work together for a better future.
-                </p>
-                <p>
+                    </p>
+                    <p>
                     You can add information about your skills, experience, and vision. This section is customizable to fit your personal portfolio.
-                </p>
+                    </p>
             </div>
         </section>
 
         <!-- Contact Section -->
-<section id="contact" class="contact hidden">
-    <div class="contact-container">
-        <h2>Contact Me</h2>
-        <p>
-            Placeholder text for the Contact section. Here, you can include ways for people to contact you, such as email, phone, or social media links.
-        </p>
-        <p>
-            You can also add a contact form or other details depending on what you'd like to provide.
-        </p>
-    </div>
-</section>
+        <section id="contact" class="contact hidden">
+            <div class="contact-container">
+                <h2>Contact Me</h2>
+                    <p>
+                    Placeholder text for the Contact section. Here, you can include ways for people to contact you, such as email, phone, or social media links.
+                    </p>
+                    <p>
+                    You can also add a contact form or other details depending on what you'd like to provide.
+                    </p>
+            </div>
+        </section>
 
         <script src="./Resources/JS/main.js"></script>
     </body>
