styled buttons, links, and added responsiveness for .projects at tablet size

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 
                 <div class="item item3">
                     <div class="item-info">
-                        <h2>Fotomatic</h2>
+                        <h2>Fotomatic Responsive Webpage</h2>
                         <a class="button" href="https://honeybadger728.github.io/Fotomatic-Project/" target="_blank">Live Site</a>
                         <a class="button" href="https://github.com/HoneyBadger728/Fotomatic-Project" target="_blank">GitHub Repository</a>
                     </div>    
