added .tech-icon images with citations to .contact section

--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@
                     <p>
                     GitHub: <a class="link" href="https://github.com/HoneyBadger728" target="_blank">https://github.com/HoneyBadger728</a>
                     </p>
+                    
+                    <div class="tech-icon-container">
+                        <img class="tech-icon" src="/Resources/Images/html-5.png" alt="HTML3 icon" title="Icon created by Freepik at Flaticon.com">
+                        <img class="tech-icon" src="/Resources/Images/css-3.png" alt="CSS3 icon" title="Icon created by Pixel perfect at Flaticon.com">
+                        <img class="tech-icon" src="/Resources/Images/js.png" alt="JavaScript icon" title="Icon created by Freepik at Flaticon.com">
+                        <img class="tech-icon" src="/Resources/Images/git.png" alt="Git icon" title="Icon created by Afian Rochmah Afif at Flaticon.com">
+                        <img class="tech-icon" src="/Resources/Images/github.png" alt="GitHub icon" title="Icon created by Freepik at Flaticon.com">
+                    </div>
             </div>
         </section>
 
