--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="./Resources/Images/microchip-solid.svg">
         <title>Normal Human Portfolio</title>
        
         <link rel="stylesheet" href="./Resources/CSS/styles.css">
