--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
                     </p>
                     
                     <div class="tech-icon-container">
-                        <img class="tech-icon" src="/Resources/Images/html-5.png" alt="HTML3 icon" title="Icon created by Freepik at Flaticon.com">
-                        <img class="tech-icon" src="/Resources/Images/css-3.png" alt="CSS3 icon" title="Icon created by Pixel perfect at Flaticon.com">
-                        <img class="tech-icon" src="/Resources/Images/js.png" alt="JavaScript icon" title="Icon created by Freepik at Flaticon.com">
-                        <img class="tech-icon" src="/Resources/Images/git.png" alt="Git icon" title="Icon created by Afian Rochmah Afif at Flaticon.com">
-                        <img class="tech-icon" src="/Resources/Images/github.png" alt="GitHub icon" title="Icon created by Freepik at Flaticon.com">
+                        <img class="tech-icon" src="./Resources/Images/html-5.png" alt="HTML3 icon" title="Icon created by Freepik at Flaticon.com">
+                        <img class="tech-icon" src="./Resources/Images/css-3.png" alt="CSS3 icon" title="Icon created by Pixel perfect at Flaticon.com">
+                        <img class="tech-icon" src="./Resources/Images/js.png" alt="JavaScript icon" title="Icon created by Freepik at Flaticon.com">
+                        <img class="tech-icon" src="./Resources/Images/git.png" alt="Git icon" title="Icon created by Afian Rochmah Afif at Flaticon.com">
+                        <img class="tech-icon" src="./Resources/Images/github.png" alt="GitHub icon" title="Icon created by Freepik at Flaticon.com">
                     </div>
             </div>
         </section>
