created .active .nav-links to keep tranforms on respective section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
         <nav class="navbar">
             <ul class="nav-links" id="site-navigation" data-visible="false">
-                <li><a href="#splash" class="nav-link" onclick="showSplash()">Home</a></li>
+                <li><a href="#splash" class="nav-link active" onclick="showSplash()">Home</a></li>
                 <li><a href="#about" class="nav-link" onclick="showAbout()">About</a></li>
                 <li><a href="#projects" class="nav-link" onclick="showProjects()">Projects</a></li>
                 <li><a href="#contact" class="nav-link" onclick="showContact()">Contact</a></li>
