added contrast to full size navbar and clamped .splash-content

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id="splash" class="splash">
             <div class="splash-content">
                 <h1>Name: Blake Davis</h1>
-                <h2>Mission: Act as a full stack developer; helping humans and machines work towards a brighter future together .  &nbsp.   &nbsp.</h2>
+                <h2>Mission: Act as a full stack developer; helping humans and machines work towards a brighter future together .&nbsp&nbsp&nbsp.&nbsp&nbsp&nbsp.</h2>
             </div>
         </section>
 
