tweaked clamp on .about-content full size

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                         My journey into tech began at an educational software startup, where I contributed as a front-end developer. This experience deepened my interest in creating intuitive, user-centered applications and inspired me to expand my expertise. Through dedicated learning on Codecademy, I’ve transitioned into a full-stack developer, eager to craft innovative solutions that bridge the gap between people and technology.
                         
-                        When I’m not coding, I enjoy exploring emerging technologies, mentoring others, and finding creative ways to make a positive impact. Let’s work together to build something extraordinary!
+                        When I’m not coding, I enjoy exploring emerging technologies and finding creative ways to make a positive impact. Let’s work together to build something extraordinary!
                     </p>
                     
             </div>
