--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="contact-container">
                 <h2>Contact Me</h2>
                     <p>
-                    Email: BlakelyJDavis@gmail.com
+                    Email: <a href="mailto:BlakelyJDavis@gmail.com">BlakelyJDavis@gmail.com</a>
                     </p>
                     <p>
                     GitHub: <a class="link" href="https://github.com/HoneyBadger728" target="_blank">https://github.com/HoneyBadger728</a>
